@@ -33,8 +33,10 @@ extern int (*_Stat) (const char * path, struct stat * st);
 extern int (*_Lstat) (const char * path, struct stat * st);
 extern int (*_Fstat) (void * fd, struct stat * st);
 extern int (*_Chown) (const char * path, uid_t owner, gid_t group);
+extern int (*_Fchown) (void * fd, uid_t owner, gid_t group);
 extern int (*_Lchown) (const char * path, uid_t owner, gid_t group);
 extern int (*_Chmod) (const char * path, mode_t mode);
+extern int (*_Fchmod) (void * fd, mode_t mode);
 extern int (*_Mkfifo) (const char * path, mode_t mode);
 extern int (*_Mknod) (const char * path, mode_t mode, dev_t dev);
 extern int (*_Utime) (const char * path, const struct utimbuf * buf);
